force-app/main/default/objects/Contact/fields/Top_Rep__c.field-meta.xml
<CustomField>
    <fullName>Top_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Rep</label>
    <type>Checkbox</type>
</CustomField>