force-app/main/default/objects/Contact/fields/Transfer_to_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Sandbox__c</fullName>
    <formula>Account.Transfer_to_Sandbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer to Sandbox</label>
    <type>Checkbox</type>
</CustomField>