force-app/main/default/objects/Contact/fields/Update_Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Update_Partner_Company_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Partner Company Name</label>
    <type>Checkbox</type>
</CustomField>