force-app/main/default/objects/Contact/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <formula>UserID__r.Manager.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager</label>
    <type>Text</type>
</CustomField>