force-app/main/default/objects/Contact/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links Viewsonic Users with contacts. Used in automation for the product request roll ups.</description>
    <label>UserID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>