force-app/main/default/objects/Contact/fields/UserIdCostCenter__c.field-meta.xml
<CustomField>
    <fullName>UserIdCostCenter__c</fullName>
    <formula>UserID__r.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserIdCostCenter</label>
    <type>Text</type>
</CustomField>