force-app/main/default/objects/Contact/fields/ViewBoard_Url__c.field-meta.xml
<CustomField>
    <fullName>ViewBoard_Url__c</fullName>
    <formula>Account.EducationPortalURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ViewBoard Url</label>
    <type>Text</type>
</CustomField>