force-app/main/default/objects/Contact/fields/ViewBoard_User_Type__c.field-meta.xml
<CustomField>
    <fullName>ViewBoard_User_Type__c</fullName>
    <label>ViewBoard User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Application Owner</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Super Admin</fullName>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
            <value>
                <fullName>IT Management</fullName>
                <isActive>false</isActive>
                <label>IT Management</label>
            </value>
            <value>
                <fullName>Instructional Coach</fullName>
                <isActive>false</isActive>
                <label>Instructional Coach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>