force-app/main/default/objects/Contact/fields/ViewSchool__c.field-meta.xml
<CustomField>
    <fullName>ViewSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViewSchool Member</label>
    <type>Checkbox</type>
</CustomField>