force-app/main/default/objects/Contact/fields/VS_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>VS_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls validation rules for delete. Also for duplicate sales rep. Primary used for Eval Process flow to pass information between user and contact and ensure they are synced.</description>
    <label>VS Sales Rep</label>
    <type>Checkbox</type>
</CustomField>