force-app/main/default/objects/Contact/fields/Website_Portal__c.field-meta.xml
<CustomField>
    <fullName>Website_Portal__c</fullName>
    <label>Website (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>