force-app/main/default/objects/Contact/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <description>The website of the business</description>
    <label>Website / URL</label>
    <type>Url</type>
</CustomField>