force-app/main/default/objects/Contact/recordTypes/Create_Contact.recordType-meta.xml
<RecordType>
    <fullName>Create_Contact</fullName>
    <active>true</active>
    <description>Record type to create a contact. Minimizes unneeded fields</description>
    <label>Create Contact</label>
</RecordType>