force-app/main/default/objects/Contact/recordTypes/Inactive.recordType-meta.xml
<RecordType>
    <fullName>Inactive</fullName>
    <active>true</active>
    <description>Inactive contacts</description>
    <label>Inactive</label>
</RecordType>