force-app/main/default/objects/Contact/validationRules/Email_address_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_address_needed</fullName>
    <active>true</active>
    <description>On creation , contacts must have email address... legacy contacts should have them but do not want to cause errors on system when the email address is null. also prevents removal of placeholder email for creation purposes.</description>
    <errorConditionFormula>(isblank(Email ) &amp;&amp; isnew()) || not(isblank(priorvalue(Email))) &amp;&amp; isblank(Email)&amp;&amp;  $Organization.Id = &apos;00D780000004d2r&apos;</errorConditionFormula>
    <errorMessage>You must have an email address</errorMessage>
</ValidationRule>