force-app/main/default/objects/Contact/validationRules/Viewsonic_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Viewsonic_Contacts</fullName>
    <active>true</active>
    <description>Only admin can create viewsonic contacts</description>
    <errorConditionFormula>contains(Email ,lower(&apos;@viewsonic.com&apos;)) &amp;&amp; $Profile.Name != &apos;SFDC Admin&apos; &amp;&amp; isnew() &amp;&amp; Apex_Test__c = false</errorConditionFormula>
    <errorMessage>Only the system administrator can create Viewsonic contacts</errorMessage>
</ValidationRule>