force-app/main/default/objects/Contact/listViews/A1_All_MY_Contacts.listView-meta.xml
<ListView>
    <fullName>A1_All_MY_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Accounts_Handled_by_Rep__c</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>A1 - All My Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>