force-app/main/default/objects/Contact/listViews/Account_Verified_Need_Onboarding.listView-meta.xml
<ListView>
    <fullName>Account_Verified_Need_Onboarding</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Portal_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>PortalSign_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Status__c</field>
        <operation>equals</operation>
        <value>Account Verified Need Onboard</value>
    </filters>
    <label>Account Verified Need Onboarding</label>
    <language>en_US</language>
    <sharedTo>
        <group>Channel_Marketing</group>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>