force-app/main/default/objects/Contact/listViews/All_My_Territories.listView-meta.xml
<ListView>
    <fullName>All_My_Territories</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Status__c</field>
        <operation>equals</operation>
        <value>Onboarded and Verified</value>
    </filters>
    <filters>
        <field>VSSubRegion__c</field>
        <operation>equals</operation>
        <value>VSA CAN</value>
    </filters>
    <label>All My Territories</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>