force-app/main/default/objects/Contact/listViews/All_Partners_not_fully_Onboarded.listView-meta.xml
<ListView>
    <fullName>All_Partners_not_fully_Onboarded</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Portal_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>PortalSign_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Status__c</field>
        <operation>equals</operation>
        <value>Verify Account,Awaiting Info from Customer,Awaiting Review from Channel Admin</value>
    </filters>
    <filters>
        <field>Portal_Status__c</field>
        <operation>equals</operation>
        <value>Account Verified Need Onboard</value>
    </filters>
    <label>All Partners not fully Onboarded</label>
    <language>en_US</language>
    <sharedTo>
        <group>Channel_Marketing</group>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>