force-app/main/default/objects/Contact/listViews/AV_Contacts.listView-meta.xml
<ListView>
    <fullName>AV_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Billing_State__c</columns>
    <columns>Account.AV_Solutions_Partner__c</columns>
    <columns>Account.Spiff_Type__c</columns>
    <columns>Finch_Club_Status__c</columns>
    <columns>Account.AV_Lead_Source__c</columns>
    <columns>Reseller_Opp_Count__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>pi__score__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AccountTypeCorrect__c</field>
        <operation>equals</operation>
        <value>VAR</value>
    </filters>
    <filters>
        <field>Billing_Country__c</field>
        <operation>notEqual</operation>
        <value>CA,Canada</value>
    </filters>
    <filters>
        <field>IndustryAcc__c</field>
        <operation>equals</operation>
        <value>AV Solution</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Active</value>
    </filters>
    <label>My AV Contacts</label>
    <sharedTo>
        <role>VSA_US_AV_Solutions_Sales</role>
    </sharedTo>
</ListView>