force-app/main/default/objects/Contact/listViews/AZ2_All_Contacts_Firm.listView-meta.xml
<ListView>
    <fullName>AZ2_All_Contacts_Firm</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>AZ2 - All Contacts Marketing Firms</label>
    <language>en_US</language>
    <sharedTo>
        <portalRole>ByPComunicacionesPartnerUser</portalRole>
    </sharedTo>
</ListView>