force-app/main/default/objects/Contact/listViews/Consumer_Business_Contacts.listView-meta.xml
<ListView>
    <fullName>Consumer_Business_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Billing_State__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Reseller_Opp_Count__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Account.AV_Lead_Source__c</columns>
    <columns>Finch_Club_Status__c</columns>
    <columns>pi__score__c</columns>
    <columns>pi__last_activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountTypeCorrect__c</field>
        <operation>equals</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>Billing_Country__c</field>
        <operation>notEqual</operation>
        <value>CA,Canada</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Active</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account.AV_Lead_Source__c</field>
        <operation>equals</operation>
        <value>B2B</value>
    </filters>
    <label>Consumer Business Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Retail_Etail_RSM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>