force-app/main/default/objects/Contact/listViews/DI_All_Distributor_Contacts.listView-meta.xml
<ListView>
    <fullName>DI_All_Distributor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountTypeCorrect__c</field>
        <operation>equals</operation>
        <value>Distributor</value>
    </filters>
    <label>D1 - All Distributor Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>US_Funded_Heads</group>
    </sharedTo>
</ListView>