force-app/main/default/objects/Contact/listViews/My_Companies_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Companies_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Type__c</field>
        <operation>equals</operation>
        <value>VAR,VAR - Latin America,NSP</value>
    </filters>
    <label>My Companies Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>Partner_Portal_Resellers</group>
    </sharedTo>
</ListView>