force-app/main/default/objects/Contact/listViews/My_Territories.listView-meta.xml
<ListView>
    <fullName>My_Territories</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Territories</label>
    <sharedTo>
        <group>All_VSA</group>
        <group>All_VSE</group>
    </sharedTo>
</ListView>