force-app/main/default/objects/Contact/listViews/Partner_Portal_Task_Delay.listView-meta.xml
<ListView>
    <fullName>Partner_Portal_Task_Delay</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Portal_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>PortalSign_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PartnerOpenTaskDate__c</field>
        <operation>greaterThan</operation>
        <value>N_DAYS_AGO:5</value>
    </filters>
    <label>Partner Portal Task Delay</label>
    <language>en_US</language>
    <sharedTo>
        <group>Channel_Marketing</group>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>