force-app/main/default/objects/Contact/listViews/Partners_Awaiting_Docs.listView-meta.xml
<ListView>
    <fullName>Partners_Awaiting_Docs</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Portal_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>PortalSign_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Info from Customer</value>
    </filters>
    <label>Awaiting Docs Partners</label>
    <language>en_US</language>
    <sharedTo>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>